$Id$
Version 1.1.2 (?? ??? 2006)
 - Fixed bug [ 1618335 ] "Column 'cal_is_public' cannot be null" when adding NUC
 - Fixed bug [ 1617805 ] missing LINK to Craig's site if using 'top-menue'
 - Fixed bug [ 1617595 ] edit_template.php Error
 - Fixed bug [ 1617983 ] 'previous' and 'next' arrows didn't work at 'pop-up'-minical
 - Fix in dbi4php.php when translate is not yet defined
 - Created new function get_users_event_ids ()
 - Created new getPredefinedVariable.php that contains all getXxxValue functions
 - Fixed bug [ 1612332 ] empty exports with date limits
 - Fixed bug [ 1445428 ] Import needs utf8_decode()
 - Fixed bug [ 1614644 ] Remote subscriptions don't work with umlauts (Sunbird)
 - Implemented PATCH [ webcalendar-Bugs-1615738 ] EMAIL_EVENT_CREATE pref don't get invisible
 - Updated German.txt for ws/event_mod.php and ws/user_mod.php.
 - Fix bug [ 1614167 ] adjusted bg-image not working at views
   Cut the wrong set of dupe code the first time.
 - Updated German.txt. Thanks Markus.
 - Fix typo [webcalendar - Help / Troubleshooting] Tiny error in "styles.php" v.1.197
 - Applied PATCH [ 1221369 ] upgrade docs <-> Postgresql
   but, to install/sql/upgrade-postgres.sql instead of UPGRADING.html
 - Fix bug [ 1612985 ] new installation get an error using the installation-wizard
 - Fix bug [ 1612973 ] error during using 'update_translation.pl'
 - Implemented PATCH [ 1611288 ] Japanese translation updated
 - Added translate() to some phrases in dbi4php.php.
 - Implemented PATCH [ 1503321 ] Modify dbi4php.php to enable concurrent MySQL connections
 - Implemented PATCH [ 1436533 ] Case insensitive sorting from LDAP users
 - Fixed bug [ 1610829 ] view_entry.php and postgres issue
 - Fixed bug [ 1605992 ] matrix-grid-thickness not correct displayed for IE
 - Fixed bug [ 1607264 ] login problem for non-admin user v1.1.2
 - Impemented PATCH [ 1562620 ] Date Range Search
 - Impemented RFE [ 903167 ] Advanced Search by Category/Date Range